--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,2 @@
 exportPattern("^[[:alpha:]]+")
-importFrom("utils", "write.table")
+importFrom("utils", "write.table", "DBI", "glue", "rjson", "RMariaDB")
